# PhysicsSimulator

./: CMakeLists.txt  README.md  test2.txt
include/: calculations.h  coordinate.h  log.h  particle.h
src/: calculations.cpp  coordinate.cpp  log.cpp  main.cpp  particle.cpp
